...
        android:src="@drawable/login_background_image"
        android:visibility="gone"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:orientation="vertical">

...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:focusable="true">

                        <EditText
                            android:id="@+id/hostUrlInput"
                            style="@style/EditText.Authenticator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:drawablePadding="5dp"
                            android:hint="@string/auth_host_url"
...
                            android:theme="@style/Theme.ownCloud.Authenticator.EditText">

                            <requestFocus />
                        </EditText>

                        <ImageButton
                            android:id="@+id/embeddedCheckServerButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginEnd="5dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/auth_refresh_button"
...
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_action_refresh"
                            android:visibility="gone" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/server_status_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/auth_testing_connection"
                        android:drawableStart="@android:drawable/stat_notify_sync"
                        android:drawablePadding="5dp"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/account_username"
                            style="@style/EditText.Authenticator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:hint="@string/auth_username"
                            android:inputType="textNoSuggestions"
...
                        android:visibility="gone"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/login_text_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/account_password"
                            style="@style/EditText.Authenticator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:hint="@string/auth_password"
                            android:inputType="textPassword"
                            android:theme="@style/Theme.ownCloud.Authenticator.EditText">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/auth_status_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/auth_unauthorized"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/login_credentials_text_color"
                        android:visibility="gone"
                        app:drawableTint="@color/login_credentials_text_color"
                        tools:text="@string/auth_unauthorized" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/setup_btn_login"
                        android:text="@string/setup_btn_login"
                        android:theme="@style/Button.Authenticator"
...
