...
    <string name="uploader_upload_failed_credentials_error">Upload failed, you need to log in again</string>
    <string name="uploader_upload_failed_ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="uploader_upload_text_dialog_title">Insert a name for the new file</string>
    <string name="uploader_upload_text_dialog_filename_error_empty">Filename must not be empty</string>
    <string name="uploader_upload_text_dialog_filename_error_length_max">Filename must not be more than %d characters</string>
    <string name="uploader_upload_text_filename_hint">Filename</string>
    <string name="ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="uploads_view_title">Uploads</string>
    <string name="uploads_view_group_current_uploads">Current</string>
    <string name="uploads_view_group_failed_uploads">Failed (tap to retry)</string>
    <string name="uploads_view_group_finished_uploads">Uploaded</string>
    <string name="uploads_view_group_file_count">%d files</string>
    <string name="uploads_view_group_file_count_single">%d file</string>
...
    <string name="media_forward_description">Fast forward button</string>
    <string name="upload_from_camera_title">Picture from camera</string>

    <string name="auth_getting_authorization">Getting authorization&#8230;</string>
    <string name="auth_trying_to_login">Trying to log in&#8230;</string>
    <string name="auth_no_net_conn_title">No network connection</string>
    <string name="auth_nossl_plain_ok_title">Secure connection unavailable.</string>
    <string name="auth_connection_established">Connection established</string>
    <string name="auth_testing_connection">Testing connection</string>
    <string name="auth_not_configured_title">Malformed server configuration</string>
    <string name="auth_account_not_new">An account for the same user and server already exists in the device</string>
    <string name="auth_account_not_the_same">The entered user does not match the user of this account</string>
    <string name="auth_unknown_error_title">Unknown error occurred!</string>
    <string name="auth_incorrect_path_title">Server instance not found</string>
    <string name="auth_incorrect_address_title">Wrong server address format</string>
    <string name="auth_ssl_general_error_title">SSL initialization failed</string>
    <string name="auth_bad_oc_version_title">Unrecognized server version</string>
    <string name="auth_wrong_connection_title">Couldn\'t establish connection</string>
    <string name="auth_secure_connection">Secure connection established</string>
    <string name="auth_unauthorized">Wrong username or password</string>
    <string name="auth_oauth_error">Unsuccessful authorization</string>
    <string name="auth_oauth_error_access_denied">Access denied by authorization server</string>
    <string name="auth_wtf_reenter_URL">Unexpected state; please enter the server address again</string>
    <string name="auth_expired_oauth_token_toast">Your authorization expired. Please, authorize again</string>
    <string name="auth_expired_basic_auth_toast">Please enter the current password</string>
...
