...
        android:visibility="gone"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="180dp">

        <LinearLayout
            android:id="@+id/details_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/details_btn"
            style="@style/Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ssl_validator_btn_details_see" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok"
            style="@style/Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_yes" />

...
