...
        </com.andrognito.patternlockview.PatternLockView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:theme="@style/Button.Primary" />

    </LinearLayout>

</RelativeLayout>

